# CG-Project

./: .gitattributes  .gitignore  README.md
Phase 1/: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
Phase 1/Relatório - CG - 1ªFase/: listagemImportadaLayout.l
Phase 1/doxygen_documentation/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classes.html  classtinyxml2_1_1_dyn_array-members.html  classtinyxml2_1_1_dyn_array.html  classtinyxml2_1_1_dyn_array.js  classtinyxml2_1_1_mem_pool-members.html  classtinyxml2_1_1_mem_pool.html  classtinyxml2_1_1_mem_pool.js  classtinyxml2_1_1_mem_pool_t-members.html  classtinyxml2_1_1_mem_pool_t.html  classtinyxml2_1_1_mem_pool_t.js  classtinyxml2_1_1_str_pair-members.html  classtinyxml2_1_1_str_pair.html  classtinyxml2_1_1_x_m_l_attribute-members.html  classtinyxml2_1_1_x_m_l_attribute.html  classtinyxml2_1_1_x_m_l_comment-members.html  classtinyxml2_1_1_x_m_l_comment.html  classtinyxml2_1_1_x_m_l_comment.js  classtinyxml2_1_1_x_m_l_const_handle-members.html  classtinyxml2_1_1_x_m_l_const_handle.html  classtinyxml2_1_1_x_m_l_declaration-members.html  classtinyxml2_1_1_x_m_l_declaration.html  classtinyxml2_1_1_x_m_l_declaration.js  classtinyxml2_1_1_x_m_l_document-members.html  classtinyxml2_1_1_x_m_l_document.html  classtinyxml2_1_1_x_m_l_document.js  classtinyxml2_1_1_x_m_l_element-members.html  classtinyxml2_1_1_x_m_l_element.html  classtinyxml2_1_1_x_m_l_element.js  classtinyxml2_1_1_x_m_l_handle-members.html  classtinyxml2_1_1_x_m_l_handle.html  classtinyxml2_1_1_x_m_l_node-members.html  classtinyxml2_1_1_x_m_l_node.html  classtinyxml2_1_1_x_m_l_node.js  (+177 more)
Phase 1/doxygen_documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_19.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_3.js  classes_7.js  defines_4.js  enumvalues_1.js  enumvalues_2.js  enumvalues_5.js  files_1.js  files_2.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  (+27 more)
Phase 1/doxygen_documentation/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_compiler_id_8c_source.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _c_make_c_x_x_compiler_id_8cpp_source.tex  annotated.tex  classtinyxml2_1_1_dyn_array.tex  classtinyxml2_1_1_mem_pool.tex  classtinyxml2_1_1_mem_pool_t.tex  classtinyxml2_1_1_str_pair.tex  classtinyxml2_1_1_x_m_l_attribute.tex  classtinyxml2_1_1_x_m_l_comment.tex  classtinyxml2_1_1_x_m_l_const_handle.tex  classtinyxml2_1_1_x_m_l_declaration.tex  classtinyxml2_1_1_x_m_l_document.tex  classtinyxml2_1_1_x_m_l_element.tex  classtinyxml2_1_1_x_m_l_handle.tex  classtinyxml2_1_1_x_m_l_node.tex  classtinyxml2_1_1_x_m_l_printer.tex  classtinyxml2_1_1_x_m_l_text.tex  classtinyxml2_1_1_x_m_l_unknown.tex  classtinyxml2_1_1_x_m_l_util.tex  classtinyxml2_1_1_x_m_l_visitor.tex  dir_1333407136841b2c3d648438334ac5b8.tex  dir_1b3fdf0d6382072a84d8ba5f121b51ef.tex  dir_1cc8b61fc66a99f19ad95ccd930a2e2a.tex  dir_1f06f200a2bf7c2e48e6cb2a25446293.tex  dir_397d9aeee4af8edecac90968d93b57df.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  dir_8f5ca1e133173265e5df971d39a24814.tex  dir_985c8d9d1c1e36c94e23e95f8e4ad8bb.tex  dir_996f45160da62e1a3d7f6046fad68f51.tex  dir_a5a88cd2797f7c0f81e2cc5851d8e2e2.tex  dir_c5323e7f6b3b1130035e394b752aabab.tex  dir_c9308ef0986e8b7bdc4ed149d9f7cddb.tex  dir_dfac15e1288602ff476cb2dc3069cdf9.tex  dir_eb3597e607fe8fefdffe4eb9a3a2528c.tex  dir_ff36d983954cb5403e7a813461001cba.tex  engine_8cpp.tex  engine_8cpp_8o_8d.tex  engine_8cpp_8o_8d_source.tex  (+37 more)
Phase 1/engine/: cone_config.xml  cube_config.xml  engine.cpp  engine.h  plane_config.xml  sphere_config.xml  xmlParser.cpp
Phase 1/engine/configs/: cone_config.xml  cube_config.xml  test_1_10.xml  test_1_11.xml  test_1_9.xml
Phase 1/generator/: README.md  generator  generator.cpp  generatorAux.cpp  generatorAux.h
Phase 1/generator/tests/: box.3d  cone.3d  plane.3d  sphere.3d
Phase 1/tests/: box_2_3.3d  cone_1_3_20_10.3d  sphere_1.5_65_60.3d
Phase2/: README.md  run.sh
Phase2/Relatório - CG - 1ªFase/: relprojLayout.tex
Phase2/engine/: engine.cpp  engine.h  xmlParser.cpp  xmlParser.h
Phase2/engine/configs/: static_solar_system.xml  temp_view.xml  test_1_8.xml  test_2_5.xml
Phase2/generator/: .generator.cpp.swp  generator  generator.cpp  generatorAux.cpp
Phase2/tests/: box_2.5_30.3d  circle_102_64.3d  circle_110_64.3d  circle_2.5_32.3d  circle_3.5_32.3d  circle_30_64.3d  circle_3_32.3d  circle_40_64.3d  circle_4_32.3d  circle_50_64.3d  circle_60_64.3d  circle_75_64.3d  circle_90_64.3d  cone_1_2_4_3.3d  sphere_10_20_20.3d  sphere_1_10_10.3d  torus_15_14_20_20.3d  torus_1_0.5_16_8.3d  torus_1_0.5_32_16.3d  torus_3.5_0.75_16_8.3d  torus_6_2_25_30.3d
Phase3/: CMakeLists.txt  Readme.md  run.sh
Phase3/engine/: catmullrom.cpp  engine.cpp  engine.h  xmlParser.cpp
Phase3/engine/configs/: dynamic_solar_system.xml  temp_view.xml  test_1_5.xml
Phase3/generator/: generator  generator.cpp  generatorAux.cpp  generatorAux.h
Phase3/tests/: bezier_10.3d  bezier_20.3d  plane_2_15.3d  sphere_10_20_20.3d  sphere_1_10_10.3d  torus_3.5_0.75_16_8.3d  torus_3_1_25_10.3d  torus_6_2_25_30.3d
Phase4/: CMakeLists.txt  Readme.md  run.sh
Phase4/engine/: catmullrom.h  engine.cpp  engine.h  texture.cpp  texture.h  xmlParser.cpp  xmlParser.h
Phase4/engine/configs/: dynamic_solar_system.xml  static_solar_system.xml  temp_view.xml  test_mil_1.xml
Phase4/generator/: generator  generator.cpp  generatorAux.cpp  generatorAux.h
Phase4/tests/: axis.3d  bezier_10.3d  box_2.5_30.3d  cone_1_2_4_3.3d  plane_1_3.3d  sphere_10_20_20.3d  sphere_1_10_10.3d  sphere_1_8_8.3d  torus_1_0.5_16_8.3d
